2012-10-27  Helmut Eller  <heller@common-lisp.net>

	* slime.el (report-condition-with-circular-list): New test.
	* swank.lisp (safe-condition-message): Bind *print-length* and
	truncate the string after 64KB.

2012-10-20  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-location-offset): When going to a position
	causes an error, for example, trying to move beyond the end of the
	buffer, move the point to 0 and then try to use the hints.

2012-10-14  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-insert-threads): Some cleanups.
	(slime-insert-table, slime-insert-table-row)
	(slime-transpose-lists) New helpers.
	(slime-threads-table-properties): Renamed from
	*slime-threads-table-properties*
	(slime-thread-index-to-id, slime-longest-lines)
	(slime-format-threads-labels, slime-insert-thread): Deleted.

2012-10-14  Helmut Eller  <heller@common-lisp.net>

	Avoid some unused variable warnings.

	* slime.el (slime-xref-group, slime-all-contribs, [selector] ??):
	Use _ as prefix or in loop-destructuring: (loop for (nil) in ...).

2012-10-14  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-goto-source-location-buffer-and-file): Delete
	unused function.

2012-10-14  Helmut Eller  <heller@common-lisp.net>
	Avoid flet.

	* slime.el (with-struct, slime-compute-policy)
	(slime-create-note-overlay, slime-merge-note-into-overlay)
	(slime-file-name-merge-source-root)
	(slime-highlight-differences-in-dirname)
	(slime-check-location-filename-sanity, slime-macroexpand-undo)
	(slime-read-connection)
	(slime-inspector-property-at-point): Use macrolet or a
	comibination of let and funcall as replacement for flet.

2012-10-14  Helmut Eller  <heller@common-lisp.net>
	Avoid labels.

	* hyperspec.el (hyperspec--get-one-line): New function.

2012-10-14  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (close-connection%): Let *debugger-hook* be nil
	across the entire function to that we don't call our own debugger